src/App.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
}

.not-started {
  width: 100%;
  height: 100vh;
  background-color: #c3e6de;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.quiz-title {
  margin: 0;
  font-size: 4rem;
  background: -webkit-linear-gradient(#f69292, #333);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.quiz-description {
  margin: 0.5rem 0 1.8rem 0;
  font-size: 1.2rem;
  font-family: monospace;
}

.start-button {
  letter-spacing: 2px;
  background-color: darkslateblue;
  color: white;
  border: none;
  font-weight: bolder;
  padding: 16px;
  border-radius: 15px;
  cursor: pointer;
}

.wait {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: auto;
}

.circle {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: #f69292 solid 8px;
  border-top: 16px solid #3498db;
  background-color: antiquewhite;
  animation: spin 2s linear infinite;
}

.question-container {
  margin-top: 20px;
  margin-left: 10vw;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  color: rgb(37, 37, 90);
}

.question {
  margin: 10px;
}

.option {
  display: block;
  width: fit-content;
  border: 1px solid rgb(37, 37, 90);
  padding: 5px;
  border-radius: 20px;
  margin-right: 10px;
  cursor: pointer;
  font-weight: 600;
  text-align: center;
  min-width: 50px;
}

.score-text  {
  margin: 10px;
  text-align: center;
  font-size: large;
  font-weight: 600;
}
.advise {
  margin: auto;
}
.play-again {
  margin: 10px;
}

.option:hover {
  background-color: #ccddff;
}

.options {
  display: flex;
}

input[type='radio'] {
  appearance: none;
}


hr {
  width: 70vw;
  min-width: 100%;
}

.check-answers {
  margin: 20px auto;
}


@keyframes spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

@media (min-size: 700px) {
  
}

